# rustadmin

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
.flazhost/: project.json
.github/workflows/: build-check.yml
docs/: API.md  ARCHITECTURE.md  MODULE_GUIDE.md  TESTING.md  UI_COMPONENTS.md
docs/postman/: RustAdmin.postman_collection.json
public/fe/templates/: _catalog.json
src/: db.rs  lib.rs  main.rs  site.rs
src/config/: app.rs  env.rs  fe_templates.rs  mod.rs  storage.rs  themes.rs
src/errors/: mod.rs
src/guards/: authorized.rs  current_user.rs  mod.rs
src/helpers/: ci_like.rs  flash.rs  forms.rs  mod.rs  otp.rs  pagination.rs  response.rs  view.rs
src/migrations/: m0001_create_users.rs  m0002_create_roles.rs  m0003_create_permissions.rs  m0004_create_users_roles.rs  m0005_create_roles_permissions.rs  m0006_create_settings.rs  m0007_seed_admin.rs  m0008_add_missing_columns.rs  m0009_fix_mysql_datetime.rs  mod.rs
src/modules/: mod.rs
src/modules/access/: context.rs  mod.rs
src/modules/access/controllers/: mod.rs
src/modules/access/controllers/api/: mod.rs  permission.rs  role.rs  user.rs
src/modules/access/controllers/web/: mod.rs  (+3 more)
src/modules/access/models/: mod.rs  permission.rs  role.rs  roles_permissions.rs  user.rs  users_roles.rs
src/modules/access/routes/: api.rs  mod.rs  web.rs
src/modules/access/services/: mod.rs  permission_service.rs  role_service.rs  user_service.rs
src/modules/access/validators/: mod.rs  permission.rs  role.rs  user.rs
src/modules/auth/: mod.rs  service.rs
src/modules/auth/routes/: api.rs  mod.rs  web.rs
src/modules/components/: controllers.rs  mod.rs
src/modules/dashboard/: controllers.rs  mod.rs
src/modules/home/: controllers.rs  mod.rs  services.rs
src/modules/media/: controllers.rs  mod.rs  service.rs
src/modules/profile/: api.rs  controllers.rs  mod.rs  service.rs
src/modules/setting/: api.rs  controllers.rs  mod.rs
src/modules/setting/models/: mod.rs  setting.rs
src/modules/setting/services/: mod.rs  setting_service.rs
src/rbac/: mod.rs  registry.rs
src/security/: blacklist.rs  csrf.rs  headers.rs  jwt.rs  method_override.rs  mod.rs  rate_limit.rs
static/fe/default/css/: style.css
static/fe/default/js/: motion.js
templates/: placeholder.tera
templates/be/default/: _smoke.tera
templates/be/default/auth/: login.tera  register.tera  reset_proc.tera  reset_req.tera
templates/be/default/components/: index.tera
templates/be/default/dashboard/: index.tera
templates/be/default/profile/: profile.tera
templates/be/default/setting/: index.tera
templates/fe/default/: index.tera
templates/layouts/be/default/: foot.tera  full-width.tera  head.tera  main.tera  sidebar.tera  topbar.tera
templates/layouts/fe/default/: main.tera
tests/: access_role_perm.rs  access_user.rs  admin_pages.rs  auth_security.rs  db_schema.rs  landing_auth.rs  layout_smoke.rs  media.rs
(+10 files in other folders)
